chore(docker): ajusta a configuração do serviço MySQL
- Altera o nome do banco de dados para VetClinicDb.

- Mapeia a porta do host 3308 para a porta 3306 do container.

- Adiciona um nome fixo (Mysql-VetClinic) para o container.

- Configura um volume nomeado (vet_clinic_data) para persistir os dados do banco de dados entre as execuções.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,16 @@
 services:
   mysql:
     image: 'mysql:latest'
+    container_name: Mysql-VetClinic
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
+      - 'MYSQL_DATABASE=VetClinicDb'
       - 'MYSQL_PASSWORD=secret'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
       - 'MYSQL_USER=myuser'
     ports:
-      - '3306'
+      - "3308:3306"
+    volumes:
+      - vet_clinic_data:/var/lib/mysql
+
+volumes:
+  vet_clinic_data:
